--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     
 <span id="view_time"></span>
 
+<script>
 <script type="text/javascript">
 document.getElementById("view_time").innerHTML = getNow();
 
